--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,7 @@ nvidia-graphics-drivers (195.36.31-92) UNRELEASED; urgency=low
   * Run create-xorg-nvidia-conf from xserver-xorg-video-nvidia* postinst.
   * Add Depends: nvidia-support to libgl1-nvidia*-glx{,-ia32} and
     xserver-xorg-video-nvidia.
+  * Remove the nvidia alternative before removing the libraries.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 05 Jul 2011 17:17:36 +0200
 
