--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+nvidia-graphics-drivers (275.09.07-6) UNRELEASED; urgency=low
+
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 06 Jul 2011 22:02:23 +0200
+
 nvidia-graphics-drivers (275.09.07-5) unstable; urgency=low
 
   * Add dependency on libgl{1,x}-nvidia-alternatives to nvidia-alternative to
