--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,14 @@
 nvidia-graphics-drivers (275.09.07-6) UNRELEASED; urgency=low
 
+  * Run check-for-conflicting-opengl-libraries from libgl1-nvidia*-glx{,-ia32}
+    and xserver-xorg-video-nvidia* postinst.
+  * Run check-for-mismatching-nvidia-module from libgl1-nvidia*-glx{,-ia32},
+    xserver-xorg-video-nvidia* and libcuda1{,-ia32} postinst, if available.
+    (Closes: #620327)
+  * Run create-xorg-nvidia-conf from xserver-xorg-video-nvidia* postinst.
+    (Closes: #612093)
+  * Add Depends: nvidia-support to libgl1-nvidia*-glx{,-ia32} and
+    xserver-xorg-video-nvidia.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 06 Jul 2011 22:02:23 +0200
 
