--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-nvidia-graphics-drivers (275.21-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (275.21-1) unstable; urgency=low
 
   [ Andreas Beckmann ]
   * New upstream release 275.21 (2011-07-21).
     - Restored the release splash screen in the NVIDIA X driver (the beta
-      splash screen was accidentally reenabled between 275.09.07 and
+      splash screen was accidentally re-enabled between 275.09.07 and
       275.19).
     - Added X configuration options "3DVisionProHwButtonPairing",
       "3DVisionProHwSinglePairingTimeout", "3DVisionProHwMultiPairingTimeout",
@@ -15,7 +15,7 @@ nvidia-graphics-drivers (275.21-1) UNRELEASED; urgency=low
   * Use a versioned dependency on the transitional packages
     libgl{1,x}-nvidia-alternatives.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Fri, 22 Jul 2011 10:53:14 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Fri, 22 Jul 2011 16:59:32 +0200
 
 nvidia-graphics-drivers (275.19-1) unstable; urgency=low
 
