--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (280.11-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (280.11-1) experimental; urgency=low
 
   * New upstream beta 280.11 (2011-07-??).
     - Fixed a GLX_EXT_texture_from_pixmap bug that caused corruption
@@ -7,8 +7,9 @@ nvidia-graphics-drivers (280.11-1) UNRELEASED; urgency=low
   * New upstream beta 275 series.
     - Fixed a bug in VDPAU that caused a glibc assertion when a call to
       VdpDeviceCreateX11 failed in certain ways.
+  * Upload to experimental.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Sat, 23 Jul 2011 16:47:07 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 23 Jul 2011 17:00:20 +0200
 
 nvidia-graphics-drivers (275.21-1) unstable; urgency=low
 
