--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,32 @@
+nvidia-graphics-drivers (280.13-1) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+  * New upstream release 280.13 (2011-08-03).
+    - Fixed a GLX bug that could cause the X server to crash when
+      rendering a display list using GLX indirect rendering.
+    - Fixed a GLX bug that could cause a hang in applications that
+      use X server grabs.
+    - Fixed an X driver bug that caused 16x8 stipple patterns to
+      be rendered incorrectly.
+  * New upstream release 275 series.
+    - Fixed a bug in VDPAU that caused a glibc assertion when a call to
+      VdpDeviceCreateX11 failed in certain ways.
+    - Fixed a bug that caused the GLSL built-in uniforms gl_FrontMaterial
+      and gl_BackMaterial to not be updated properly when calling
+      glMaterial from a display list.
+    - Fixed an error handling bug that caused the OpenGL driver to
+      crash while running certain WebGL applications.
+  * Upload to unstable.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 04 Aug 2011 04:32:54 +0200
+
 nvidia-graphics-drivers (280.11-1) experimental; urgency=low
 
-  * New upstream beta 280.11 (2011-07-??).
+  [ Andreas Beckmann ]
+  * New upstream beta 280.11 (2011-07-26).
     - Fixed a GLX_EXT_texture_from_pixmap bug that caused corruption
       when texturing from sufficiently small pixmaps and, in particular,
       corruption in the GNOME Shell Message Tray.
-  * New upstream beta 275 series.
-    - Fixed a bug in VDPAU that caused a glibc assertion when a call to
-      VdpDeviceCreateX11 failed in certain ways.
   * Upload to experimental.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 23 Jul 2011 17:00:20 +0200
