track the PCI IDs extracted from the readme, too
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2505 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,9 @@ nvidia-graphics-drivers (280.13-1) UNRELEASED; urgency=low
   * Upload to unstable.
   * conftest.h: remove obsolete conftest.sh function signal_struct, no longer
     used by the legacy drivers.
+  * Because PCI ID extraction from the binary object no longer seems to work,
+    extract the supported PCI IDs from the README and track changes in
+    debian/nv-readme.ids.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 04 Aug 2011 04:32:54 +0200
 
