--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nvidia-graphics-drivers (280.13-2) unstable; urgency=low
+
+  [ Andreas Beckmann ]
+  * Add a nvidia-detect package with a script 'nvidia-detect' to detect NVIDIA
+    GPUs and recommend a driver meta package to install.  (Closes: #614825)
+    Based on the script from http://wiki.debian.org/NvidiaGraphicsDrivers
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 08 Aug 2011 14:19:04 +0200
+
 nvidia-graphics-drivers (280.13-1) unstable; urgency=low
 
   [ Andreas Beckmann ]
