--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 nvidia-graphics-drivers (280.13-2) unstable; urgency=low
 
   [ Andreas Beckmann ]
+  * Bump debhelper dependency to >= 8.1.3 for experimental debhelper compat
+    level 9, which is needed for multiarch build.  (Closes: #637368)
   * Add a nvidia-detect package with a script 'nvidia-detect' to detect NVIDIA
     GPUs and recommend a driver meta package to install.  (Closes: #614825)
     Based on the script from http://wiki.debian.org/NvidiaGraphicsDrivers
