--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,15 @@
-nvidia-graphics-drivers (280.13-2) unstable; urgency=low
+nvidia-graphics-drivers (285.03-1) UNRELEASED; urgency=low
+
+  * New upstream beta 285.03 (2011-08-17).
+    - Fixed a bug causing corruption of images which are 2047 pixels wide.
+    - Improved performance of the RENDER extension on Fermi-based GPUs.
+    - Fixed a bug causing the X server to crash after a VT-switch while running
+      an OpenGL stereo application which is a member of a swap group.
+  * Upload to experimental.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 22 Aug 2011 05:41:03 +0200
+
+nvidia-graphics-drivers (280.13-2) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
   * Bump debhelper dependency to >= 8.1.3 for experimental debhelper compat
