Refresh use-nv-kernel.o.ARCH.patch.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/285@2533 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (285.03-1) UNRELEASED; urgency=low
     - Fixed a bug causing the X server to crash after a VT-switch while running
       an OpenGL stereo application which is a member of a swap group.
   * Upload to experimental.
+  * Refresh use-nv-kernel.o.ARCH.patch.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 22 Aug 2011 05:41:03 +0200
 
