Update symbols control files.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/285@2534 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ nvidia-graphics-drivers (285.03-1) UNRELEASED; urgency=low
       an OpenGL stereo application which is a member of a swap group.
   * Upload to experimental.
   * Refresh use-nv-kernel.o.ARCH.patch.
+  * Update symbols control files.
+  * Update nv-readme.ids.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 22 Aug 2011 05:41:03 +0200
 
