--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 nvidia-graphics-drivers (280.13-2) unstable; urgency=low
 
   [ Andreas Beckmann ]
+  * Add experimental alternative dependency on xorg-video-abi-11 for using the
+    NVIDIA driver with Xserver 1.11 in unstable.  NVIDIA does not yet support
+    this version officially, therefore the "IgnoreABI" option needs to be
+    enabled, see xorg.conf(5).  (Closes: #639737)
   * Bump debhelper dependency to >= 8.1.3 for experimental debhelper compat
     level 9, which is needed for multiarch build.  (Closes: #637368)
   * Add a nvidia-detect package with a script 'nvidia-detect' to detect NVIDIA
