--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ nvidia-graphics-drivers (280.13-2) unstable; urgency=low
     NVIDIA driver with Xserver 1.11 in unstable.  NVIDIA does not yet support
     this version officially, therefore the "IgnoreABI" option needs to be
     enabled, see xorg.conf(5).  (Closes: #639737)
+  * Call check-for-mismatching-nvidia-module properly by passing the new
+    upstream version as first argument.  (Closes: #636680)
   * Bump debhelper dependency to >= 8.1.3 for experimental debhelper compat
     level 9, which is needed for multiarch build.  (Closes: #637368)
   * Add a nvidia-detect package with a script 'nvidia-detect' to detect NVIDIA
