--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (280.13-4) UNRELEASED; urgency=low
+
+  * Avoid multiarch file conflicts:
+    - Install the x86 README.txt in libgl1-nvidia-glx and nvidia-vdpau-driver.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 05 Sep 2011 12:56:07 +0200
+
 nvidia-graphics-drivers (280.13-3) unstable; urgency=low
 
   [ Andreas Beckmann ]
