--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (280.13-4) UNRELEASED; urgency=low
 
   * Avoid multiarch file conflicts:
     - Install the x86 README.txt in libgl1-nvidia-glx and nvidia-vdpau-driver.
+    - Use wildcards instead of multiarch paths in *.lintian-overrides.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 05 Sep 2011 12:56:07 +0200
 
