re-enable the nvidia-detect package, needs to go through NEW
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2571 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ nvidia-graphics-drivers (280.13-4) UNRELEASED; urgency=low
   * Avoid multiarch file conflicts:
     - Install the x86 README.txt in libgl1-nvidia-glx and nvidia-vdpau-driver.
     - Use wildcards instead of multiarch paths in *.lintian-overrides.
+  * Add a nvidia-detect package with a script 'nvidia-detect' to detect NVIDIA
+    GPUs and recommend a driver meta package to install.  (Closes: #614825)
+    Based on the script from http://wiki.debian.org/NvidiaGraphicsDrivers
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 05 Sep 2011 12:56:07 +0200
 
