add Breaks: make (= 3.82-1) to work around problems with experimental make packages
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2574 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ nvidia-graphics-drivers (280.13-4) UNRELEASED; urgency=low
   * Avoid multiarch file conflicts:
     - Install the x86 README.txt in libgl1-nvidia-glx and nvidia-vdpau-driver.
     - Use wildcards instead of multiarch paths in *.lintian-overrides.
+  * Work around make bug #635317: "make 3.82 breaks kernel module build:
+    'mixed implicit and normal rules' in linux-headers-*" (only affects the
+    version in experimental) by adding Breaks: make (= 3.82-1) to the source
+    packages.  (Closes: #640539)
   * Add a nvidia-detect package with a script 'nvidia-detect' to detect NVIDIA
     GPUs and recommend a driver meta package to install.  (Closes: #614825)
     Based on the script from http://wiki.debian.org/NvidiaGraphicsDrivers
