--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (280.13-5) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+  * Drop Conflicts with pre-squeeze kernel *-2.6.32-trunk-*.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 08 Sep 2011 11:58:32 +0200
+
 nvidia-graphics-drivers (280.13-4) unstable; urgency=low
 
   [ Andreas Beckmann ]
