--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ nvidia-graphics-drivers (280.13-5) UNRELEASED; urgency=low
   [ Andreas Beckmann ]
   * Drop Conflicts with pre-squeeze kernel *-2.6.32-trunk-*.
   * xserver-xorg-video-nvidia: add (versioned) Depends: xserver-xorg-core.
+  * Use PCI IDs extracted from the README, not the kernel module.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 08 Sep 2011 11:58:32 +0200
 
