Add a NEWS entry about incompatibility with Xorg Xserver 1.11.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2607 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (280.13-5) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
+  * Add a NEWS entry about incompatibility with Xorg Xserver 1.11.
   * Drop Conflicts with pre-squeeze kernel *-2.6.32-trunk-*.
   * xserver-xorg-video-nvidia: add (versioned) Depends: xserver-xorg-core.
   * Use PCI IDs extracted from the README, not the kernel module.
