--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ nvidia-graphics-drivers (280.13-5) UNRELEASED; urgency=low
   * Drop Conflicts with pre-squeeze kernel *-2.6.32-trunk-*.
   * xserver-xorg-video-nvidia: add (versioned) Depends: xserver-xorg-core.
   * Use PCI IDs extracted from the README, not the kernel module.
+  * Ship PCI ID lists of GPUs supported by the different legacy drivers in
+    the nvidia-detect package in /usr/share/nvidia.  (Closes: #639793)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 08 Sep 2011 11:58:32 +0200
 
