--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ nvidia-graphics-drivers (280.13-5) UNRELEASED; urgency=low
   * Use PCI IDs extracted from the README, not the kernel module.
   * Ship PCI ID lists of GPUs supported by the different legacy drivers in
     the nvidia-detect package in /usr/share/nvidia.  (Closes: #639793)
+  * Let nvidia-detect read the PCI IDs from /usr/share/nvidia/ instead of
+    hardcoding them in the script.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 08 Sep 2011 11:58:32 +0200
 
