--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (280.13-5) UNRELEASED; urgency=low
+nvidia-graphics-drivers (280.13-5) unstable; urgency=low
 
   [ Andreas Beckmann ]
   * Add a NEWS entry about incompatibility with Xorg Xserver 1.11.
@@ -10,7 +10,7 @@ nvidia-graphics-drivers (280.13-5) UNRELEASED; urgency=low
   * Let nvidia-detect read the PCI IDs from /usr/share/nvidia/ instead of
     hardcoding them in the script.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Thu, 08 Sep 2011 11:58:32 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Fri, 09 Sep 2011 15:31:58 +0200
 
 nvidia-graphics-drivers (280.13-4) unstable; urgency=low
 
