--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (280.13.really.275.28-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (280.13.really.275.28-1) unstable; urgency=low
 
   * New upstream release 275.28 (2011-09-09).
     * WARNING: this is a downgrade, some features added in 280.xx are no
@@ -14,7 +14,7 @@ nvidia-graphics-drivers (280.13.really.275.28-1) UNRELEASED; urgency=low
   * Add xorg-video-abi-11 as alternative dependency and bump xserver-xorg-core
     dependency.  (Closes: #639737)
 
- -- Andreas Beckmann <debian@abeckmann.de>  Sun, 11 Sep 2011 19:13:36 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 12 Sep 2011 00:06:58 +0200
 
 nvidia-graphics-drivers (280.13-5) unstable; urgency=low
 
