--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (280.13.really.275.28-2) UNRELEASED; urgency=low
+
+  * Drop libvdpau1 multiarch workaround, libvdpau1 0.4.1-3 got multiarch.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 20 Sep 2011 12:26:29 +0200
+
 nvidia-graphics-drivers (280.13.really.275.28-1) unstable; urgency=low
 
   * New upstream release 275.28 (2011-09-09).
