--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (285.05.09-2) UNRELEASED; urgency=low
+
+  * bug-control: collect information about installed nouveau packages.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sun, 16 Oct 2011 21:03:55 +0200
+
 nvidia-graphics-drivers (285.05.09-1) experimental; urgency=low
 
   * New upstream beta 285.05.09 (2011-10-03).
