--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,8 @@ nvidia-graphics-drivers (290.03-1) UNRELEASED; urgency=low
     - Added support for the following GPU: GeForce 510.
     - Fixed a bug that caused trapezoid and triangle rendering to be very slow
       on older GPUs with xorg-server 1.11.  (Closes: #642757 and 15 dupes)
+  * Update symbols control files.
+  * Update nv-readme.ids.
   * bug-control: collect information about installed nouveau packages.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sun, 23 Oct 2011 20:19:42 +0200
