--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (290.03-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (290.03-1) experimental; urgency=low
 
   * New upstream beta 290.03 (2011-10-21).
     - Fixed a bug that prevented the driver from loading on some systems with 
@@ -27,12 +27,13 @@ nvidia-graphics-drivers (290.03-1) UNRELEASED; urgency=low
     - Added support for the following GPU: GeForce 510.
     - Fixed a bug that caused trapezoid and triangle rendering to be very slow
       on older GPUs with xorg-server 1.11.  (Closes: #642757 and 15 dupes)
+  * Upload to experimental.
   * Update symbols control files.
   * Update nv-readme.ids.
   * Refresh use-nv-kernel.o.ARCH.patch.
   * bug-control: collect information about installed nouveau packages.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Sun, 23 Oct 2011 20:19:42 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 24 Oct 2011 02:30:46 +0200
 
 nvidia-graphics-drivers (285.05.09-1) experimental; urgency=low
 
