--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (280.13.really.275.28-2) UNRELEASED; urgency=low
 
   * Drop libvdpau1 multiarch workaround, libvdpau1 0.4.1-3 got multiarch.
+  * Update watch file to mangle the '280.13.really.' version prefix.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 20 Sep 2011 12:26:29 +0200
 
