--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-nvidia-graphics-drivers (280.13.really.275.28-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (280.13.really.275.36-1) UNRELEASED; urgency=low
 
+  * New upstream release 275.36 (2011-11-04).
+    - Fixed a bug that caused trapezoid and triangle rendering to be very slow
+      on older GPUs with xorg-server 1.11.  (Closes: #642757 and 15 dupes)
+    - Added support for the following GPU: GeForce 510
   * Drop libvdpau1 multiarch workaround, libvdpau1 0.4.1-3 got multiarch.
   * Update watch file to mangle the '280.13.really.' version prefix.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Tue, 20 Sep 2011 12:26:29 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Fri, 04 Nov 2011 19:43:47 +0100
 
 nvidia-graphics-drivers (280.13.really.275.28-1) unstable; urgency=low
 
