--- a/debian/changelog
+++ b/debian/changelog
@@ -1,20 +1,22 @@
-nvidia-graphics-drivers (280.13.really.275.36-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (280.13.really.275.36-1) unstable; urgency=low
 
+  [ Andreas Beckmann ]
   * New upstream release 275.36 (2011-11-04).
     - Fixed a bug that caused trapezoid and triangle rendering to be very slow
       on older GPUs with xorg-server 1.11.  (Closes: #642757 and 15 dupes)
-    - Added support for the following GPU: GeForce 510
-  * Drop libvdpau1 multiarch workaround, libvdpau1 0.4.1-3 got multiarch.
+    - Added support for the following GPU: GeForce 510.
   * Update watch file to mangle the '280.13.really.' version prefix.
+  * Drop libvdpau1 multiarch workaround, libvdpau1 0.4.1-3 got multiarch.
   * bug-control: collect information about installed nouveau packages.
   * Bump nvidia-kernel-common versioned dependency to 20110213 (updates initrd
     to enable/disable the nouveau blacklist).
   * Bump glx-alternative-nvidia versioned dependency to 0.2.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Fri, 04 Nov 2011 19:43:47 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Fri, 04 Nov 2011 21:10:22 +0100
 
 nvidia-graphics-drivers (280.13.really.275.28-1) unstable; urgency=low
 
+  [ Andreas Beckmann ]
   * New upstream release 275.28 (2011-09-09).
     * WARNING: this is a downgrade, some features added in 280.xx are no
       longer available and some devices may be no longer supported.
