--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,28 @@
+nvidia-graphics-drivers (290.10-1) UNRELEASED; urgency=low
+
+  * New upstream release 290.10 (2011-11-22).
+    - Fixed a bug that would cause OpenGL applications to crash when run
+      with recent releases of glibc such as glibc 2.14.90.
+    - Improved the performance of FBO bind operations when using Xinerama by
+      ~30% in some cases.
+    - Fixed a bug that could cause stereo corruption when driving a stereo
+      display and a non-stereo display from the same GPU.
+    - Fixed a bug that could cause display devices on a secondary GPU to get
+      swapped between X screens when restarting the X server.
+    - Fixed a bug that could result in line flickering in full-scene anti-
+      aliasing contexts.
+    - Fixed a bug that caused the physical dimensions of rotated monitors to be
+      reported incorrectly.
+    - Add support for the pre-VBO DrawArrays command in the server-side GLX
+      driver module.  The NVIDIA client-side GLX implementation never sends
+      this command, but the server needs to support it for compatibility with
+      other GLX client implementations.
+    - Fixed a regression that caused blank/white windows when exhausting video
+      memory on GeForce 6 and 7 series GPUs while using composited
+      desktops.  (Closes: #646975)
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 23 Nov 2011 02:04:37 +0100
+
 nvidia-graphics-drivers (290.06-1) experimental; urgency=low
 
   * New upstream beta 290.06 (2011-11-04).
