override package-name-doesnt-match-sonames libOpenCL1 - now there is amd-libopencl1, too
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2708 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ nvidia-graphics-drivers (290.10-1) UNRELEASED; urgency=low
     - Fixed a regression that caused blank/white windows when exhausting video
       memory on GeForce 6 and 7 series GPUs while using composited
       desktops.  (Closes: #646975)
+  * Update lintian overrides.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 23 Nov 2011 02:04:37 +0100
 
