--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ nvidia-graphics-drivers (290.10-1) UNRELEASED; urgency=low
       memory on GeForce 6 and 7 series GPUs while using composited
       desktops.  (Closes: #646975)
   * Update lintian overrides.
+  * debian/copyright: Update to dep5.mdwn?revision=202.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 23 Nov 2011 02:04:37 +0100
 
